Fix T66377: Applying rotation/scale on a parent changes location of a child